--- a/css/offer.css
+++ b/css/offer.css
@@ -112,7 +112,7 @@ main {
     font-size: 40px;
     line-height: 42px;
     color: #fff;
-    font-weight: 900;
+    font-weight: 700;
     text-transform: uppercase;
     position: relative; }
     @media (max-width: 576px) {
@@ -123,7 +123,7 @@ main {
       content: '';
       display: block;
       width: 90px;
-      height: 5px;
+      height: 4px;
       background-color: #fff;
       position: absolute;
       bottom: -20px;
@@ -292,7 +292,7 @@ input[type=number]::-webkit-outer-spin-button {
     display: inline-block;
     font-size: 32px;
     line-height: 34px;
-    font-weight: 900;
+    font-weight: 700;
     text-transform: uppercase;
     position: relative; }
     @media (max-width: 767px) {
@@ -314,7 +314,7 @@ input[type=number]::-webkit-outer-spin-button {
       content: '';
       display: block;
       width: 88px;
-      height: 5px;
+      height: 4px;
       position: absolute;
       bottom: -15px;
       left: 50%;
@@ -367,7 +367,8 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 12px;
     line-height: 14px;
     color: #fff;
-    font-weight: 600; }
+    font-weight: 600;
+    text-transform: capitalize; }
     @media (max-width: 991px) {
       .logo a span {
         display: none; } }
@@ -415,12 +416,12 @@ input[type=number]::-webkit-outer-spin-button {
           background-color: #00b3b7;
           opacity: 1;
           visibility: visible;
-          bottom: -10px; }
+          bottom: -7px; }
       .main-nav ul li a {
         display: inline-block;
         font-size: 14px;
         line-height: 16px;
-        font-weight: 700;
+        font-weight: 600;
         color: #fff;
         text-transform: uppercase;
         position: relative;
@@ -428,12 +429,12 @@ input[type=number]::-webkit-outer-spin-button {
         .main-nav ul li a:hover:after {
           opacity: 1;
           visibility: visible;
-          bottom: -10px; }
+          bottom: -7px; }
         .main-nav ul li a:after {
           content: '';
           display: block;
           width: 100%;
-          height: 5px;
+          height: 2px;
           background-color: #fff;
           position: absolute;
           bottom: -5px;
@@ -558,8 +559,8 @@ input[type=number]::-webkit-outer-spin-button {
       display: inline-block;
       vertical-align: middle;
       text-transform: uppercase;
-      font-size: 14px;
-      line-height: 16px;
+      font-size: 12px;
+      line-height: 14px;
       color: #fff;
       margin: 0 2px; }
       .main-footer .footer-menu-col .footer-other-nav a.active {
@@ -667,7 +668,7 @@ input[type=number]::-webkit-outer-spin-button {
       width: 100%;
       font-size: 14px;
       line-height: 16px;
-      font-weight: 900;
+      font-weight: 700;
       color: #fff;
       text-transform: uppercase;
       z-index: 10; }
@@ -699,7 +700,7 @@ input[type=number]::-webkit-outer-spin-button {
       line-height: 26px;
       color: #00b3b7;
       text-transform: uppercase;
-      font-weight: 900;
+      font-weight: 700;
       margin-bottom: 20px;
       padding-right: 25px; }
     .invest-modal-dialog .modal-content em {
@@ -976,7 +977,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin-bottom: 15px;
   font-size: 18px;
   line-height: 20px;
-  font-weight: 900;
+  font-weight: 700;
   color: #203140;
   text-transform: uppercase; }
   .offer-span em {
@@ -1011,7 +1012,7 @@ input[type=number]::-webkit-outer-spin-button {
       padding: 0;
       font-size: 24px;
       line-height: 26px;
-      font-weight: 900;
+      font-weight: 700;
       color: #00b3b7;
       margin-bottom: 30px; }
     .key-points-overview-section .offer-sidebar .prospectus-wrapper .offer-span {
@@ -1051,7 +1052,7 @@ input[type=number]::-webkit-outer-spin-button {
         display: block;
         font-size: 18px;
         line-height: 20px;
-        font-weight: 900;
+        font-weight: 700;
         color: #203140;
         text-transform: uppercase;
         margin-bottom: 50px; }
@@ -1096,7 +1097,6 @@ input[type=number]::-webkit-outer-spin-button {
   .deal-terms-list li a {
     display: block;
     padding: 20px 0;
-    border-bottom: 1px solid #000;
     text-decoration: none; }
     .deal-terms-list li a:hover span {
       text-decoration: underline; }
@@ -1152,7 +1152,7 @@ input[type=number]::-webkit-outer-spin-button {
     width: 100%;
     font-size: 28px;
     line-height: 30px;
-    font-weight: 900;
+    font-weight: 700;
     color: #fff;
     text-transform: uppercase;
     z-index: 10; }
@@ -1242,8 +1242,7 @@ input[type=number]::-webkit-outer-spin-button {
       padding: 50px 0; } }
   .news-section .news-row {
     margin-bottom: 45px;
-    padding-bottom: 40px;
-    border-bottom: 1px solid #aa4144; }
+    padding-bottom: 40px; }
     .news-section .news-row:last-child {
       margin-bottom: 0; }
     .news-section .news-row .news-title {
@@ -1279,33 +1278,31 @@ input[type=number]::-webkit-outer-spin-button {
     .faq-section {
       padding: 50px 0; } }
 
-.faq-container {
-  border-bottom: 1px solid #000; }
-  .faq-container.active .faq-header .faq-arrow {
-    transform: translateY(-50%) rotate(180deg); }
-  .faq-container .faq-header {
-    position: relative; }
-    .faq-container .faq-header .faq-arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      transition: all .2s linear;
-      right: -6px; }
-    .faq-container .faq-header a {
-      display: block;
-      text-decoration: none;
-      padding: 15px 20px 15px 0;
-      font-size: 18px;
-      line-height: 20px;
-      font-weight: 700;
-      color: #fff;
-      position: relative;
-      z-index: 10; }
-  .faq-container .faq-body p {
-    font-size: 16px;
-    line-height: 24px;
-    color: #203140;
-    margin-bottom: 15px;
-    text-align: justify; }
+.faq-container.active .faq-header .faq-arrow {
+  transform: translateY(-50%) rotate(180deg); }
+.faq-container .faq-header {
+  position: relative; }
+  .faq-container .faq-header .faq-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: all .2s linear;
+    right: -6px; }
+  .faq-container .faq-header a {
+    display: block;
+    text-decoration: none;
+    padding: 15px 20px 15px 0;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 700;
+    color: #fff;
+    position: relative;
+    z-index: 10; }
+.faq-container .faq-body p {
+  font-size: 16px;
+  line-height: 24px;
+  color: #203140;
+  margin-bottom: 15px;
+  text-align: justify; }
 
 /*# sourceMappingURL=offer.css.map */
