--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -44,6 +44,7 @@
       line-height: 14px;
       color: #fff;
       font-weight: 600;
+      text-transform: capitalize;
       
       @media (max-width: $screen-md-max) {
         display: none;
@@ -104,7 +105,7 @@
             background-color: $main-color;
             opacity: 1;
             visibility: visible;
-            bottom: -10px;
+            bottom: -7px;
           }
         }
       }
@@ -113,7 +114,7 @@
         display: inline-block;
         font-size: 14px;
         line-height: 16px;
-        font-weight: 700;
+        font-weight: 600;
         color: #fff;
         text-transform: uppercase;
         position: relative;
@@ -123,7 +124,7 @@
           &:after {
             opacity: 1;
             visibility: visible;
-            bottom: -10px;
+            bottom: -7px;
           }
         }
 
@@ -131,7 +132,7 @@
           content: '';
           display: block;
           width: 100%;
-          height: 5px;
+          height: 2px;
           background-color: #fff;
           position: absolute;
           bottom: -5px;
@@ -258,3 +259,4 @@
     }
   }
 }
+
