--- a/css/homepage.css
+++ b/css/homepage.css
@@ -443,6 +443,45 @@ input[type=number]::-webkit-outer-spin-button {
           visibility: hidden;
           transition: all .2s linear; }
 
+.mobile-menu-button {
+  display: none;
+  width: 35px;
+  height: 35px;
+  margin-left: 15px;
+  cursor: pointer;
+  position: relative; }
+  @media (max-width: 320px) {
+    .mobile-menu-button {
+      margin-left: 10px; } }
+  .mobile-menu-button.active span.line1 {
+    top: 18px;
+    transform: rotate(45deg); }
+  .mobile-menu-button.active span.line2 {
+    opacity: 0;
+    visibility: hidden;
+    right: 10px; }
+  .mobile-menu-button.active span.line3 {
+    bottom: 15px;
+    width: 100%;
+    transform: rotate(-45deg); }
+  .mobile-menu-button span {
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    transition: all .2s linear; }
+    .mobile-menu-button span.line1 {
+      top: 7px; }
+    .mobile-menu-button span.line2 {
+      top: 17px; }
+    .mobile-menu-button span.line3 {
+      bottom: 6px;
+      width: 25px; }
+  @media (max-width: 768px) {
+    .mobile-menu-button {
+      display: block; } }
+
 .header-buttons {
   padding-top: 5px; }
   @media (max-width: 768px) {
@@ -452,44 +491,6 @@ input[type=number]::-webkit-outer-spin-button {
       align-items: center;
       z-index: 100;
       padding-top: 0; } }
-  .header-buttons .mobile-menu-button {
-    display: none;
-    width: 35px;
-    height: 35px;
-    margin-left: 15px;
-    cursor: pointer;
-    position: relative; }
-    @media (max-width: 320px) {
-      .header-buttons .mobile-menu-button {
-        margin-left: 10px; } }
-    .header-buttons .mobile-menu-button.active span.line1 {
-      top: 18px;
-      transform: rotate(45deg); }
-    .header-buttons .mobile-menu-button.active span.line2 {
-      opacity: 0;
-      visibility: hidden;
-      right: 10px; }
-    .header-buttons .mobile-menu-button.active span.line3 {
-      bottom: 15px;
-      width: 100%;
-      transform: rotate(-45deg); }
-    .header-buttons .mobile-menu-button span {
-      position: absolute;
-      right: 0;
-      width: 100%;
-      height: 2px;
-      background-color: #fff;
-      transition: all .2s linear; }
-      .header-buttons .mobile-menu-button span.line1 {
-        top: 7px; }
-      .header-buttons .mobile-menu-button span.line2 {
-        top: 17px; }
-      .header-buttons .mobile-menu-button span.line3 {
-        bottom: 6px;
-        width: 25px; }
-    @media (max-width: 768px) {
-      .header-buttons .mobile-menu-button {
-        display: block; } }
   .header-buttons a {
     display: inline-block;
     vertical-align: middle;
@@ -519,6 +520,26 @@ input[type=number]::-webkit-outer-spin-button {
         border-color: #00b3b7; }
     .header-buttons a.button-sign-up:hover, .header-buttons a.button-sign-up.active {
       color: #00b3b7; }
+
+.user-info {
+  text-decoration: none; }
+  .user-info:hover {
+    text-decoration: none; }
+    .user-info:hover span {
+      color: #00b3b7; }
+  .user-info i {
+    display: block;
+    font-size: 20px;
+    color: #fff;
+    margin-right: 10px; }
+  .user-info span {
+    display: block;
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 700;
+    transition: all .2s linear; }
 
 .main-footer {
   background-color: #203140;
@@ -707,82 +728,83 @@ input[type=number]::-webkit-outer-spin-button {
           font-style: normal;
           font-size: 21px;
           line-height: 23px; }
-    .investment-board .investment-board-container .investment-board-row {
-      margin-bottom: 22px;
-      padding-bottom: 22px;
-      border-bottom: 1px solid #dedfe0; }
-      .investment-board .investment-board-container .investment-board-row .investment-board-left {
-        position: relative;
-        margin-bottom: 23px; }
-        .investment-board .investment-board-container .investment-board-row .investment-board-left:after {
-          content: '';
-          display: block;
-          position: absolute;
-          top: 0;
-          right: -14px;
-          height: 100%;
-          width: 1px;
-          background-color: #dedfe0; }
-          @media (max-width: 768px) {
-            .investment-board .investment-board-container .investment-board-row .investment-board-left:after {
-              display: none; } }
-        .investment-board .investment-board-container .investment-board-row .investment-board-left span {
-          display: block;
-          color: #203140;
-          font-size: 16px;
-          line-height: 18px;
-          font-weight: 700;
-          margin-bottom: 10px;
-          text-transform: uppercase; }
-        .investment-board .investment-board-container .investment-board-row .investment-board-left p {
-          font-size: 16px;
-          line-height: 20px;
-          margin: 0; }
+
+.investment-board-row {
+  margin-bottom: 22px;
+  padding-bottom: 22px;
+  border-bottom: 1px solid #dedfe0; }
+  .investment-board-row .investment-board-left {
+    position: relative;
+    margin-bottom: 23px; }
+    .investment-board-row .investment-board-left:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      right: -14px;
+      height: 100%;
+      width: 1px;
+      background-color: #dedfe0; }
       @media (max-width: 768px) {
-        .investment-board .investment-board-container .investment-board-row .investment-board-right {
-          margin-top: 20px; } }
-      .investment-board .investment-board-container .investment-board-row .investment-board-right .status {
+        .investment-board-row .investment-board-left:after {
+          display: none; } }
+    .investment-board-row .investment-board-left span {
+      display: block;
+      color: #203140;
+      font-size: 16px;
+      line-height: 18px;
+      font-weight: 700;
+      margin-bottom: 10px;
+      text-transform: uppercase; }
+    .investment-board-row .investment-board-left p {
+      font-size: 16px;
+      line-height: 20px;
+      margin: 0; }
+  @media (max-width: 768px) {
+    .investment-board-row .investment-board-right {
+      margin-top: 20px; } }
+  .investment-board-row .investment-board-right .status {
+    display: block;
+    font-size: 18px;
+    line-height: 20px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 10px; }
+    .investment-board-row .investment-board-right .status.status-closes {
+      color: #203140; }
+    .investment-board-row .investment-board-right .status.status-opens {
+      color: #00b3b7; }
+      .investment-board-row .investment-board-right .status.status-opens em {
+        color: #000; }
+    .investment-board-row .investment-board-right .status em {
+      font-size: 16px;
+      line-height: 18px;
+      color: #00b3b7;
+      font-style: normal;
+      font-weight: 300;
+      margin-left: 7px; }
+  .investment-board-row .investment-board-right .date {
+    margin-bottom: 20px; }
+    .investment-board-row .investment-board-right .date .date-col {
+      margin-right: 30px;
+      text-align: center; }
+      .investment-board-row .investment-board-right .date .date-col:last-child {
+        margin-right: 0; }
+      .investment-board-row .investment-board-right .date .date-col mark {
         display: block;
-        font-size: 18px;
-        line-height: 20px;
-        text-transform: uppercase;
-        font-weight: 700;
-        margin-bottom: 10px; }
-        .investment-board .investment-board-container .investment-board-row .investment-board-right .status.status-closes {
-          color: #203140; }
-        .investment-board .investment-board-container .investment-board-row .investment-board-right .status.status-opens {
-          color: #00b3b7; }
-          .investment-board .investment-board-container .investment-board-row .investment-board-right .status.status-opens em {
-            color: #000; }
-        .investment-board .investment-board-container .investment-board-row .investment-board-right .status em {
-          font-size: 16px;
-          line-height: 18px;
-          color: #00b3b7;
-          font-style: normal;
-          font-weight: 300;
-          margin-left: 7px; }
-      .investment-board .investment-board-container .investment-board-row .investment-board-right .date {
-        margin-bottom: 20px; }
-        .investment-board .investment-board-container .investment-board-row .investment-board-right .date .date-col {
-          margin-right: 30px;
-          text-align: center; }
-          .investment-board .investment-board-container .investment-board-row .investment-board-right .date .date-col:last-child {
-            margin-right: 0; }
-          .investment-board .investment-board-container .investment-board-row .investment-board-right .date .date-col mark {
-            display: block;
-            padding: 0;
-            background: none;
-            font-size: 48px;
-            line-height: 50px;
-            color: #203140;
-            margin-bottom: 5px; }
-          .investment-board .investment-board-container .investment-board-row .investment-board-right .date .date-col i {
-            display: block;
-            font-style: normal;
-            font-size: 20px;
-            line-height: 22px;
-            color: #00b3b7;
-            text-transform: uppercase; }
+        padding: 0;
+        background: none;
+        font-size: 48px;
+        line-height: 50px;
+        color: #203140;
+        margin-bottom: 5px; }
+      .investment-board-row .investment-board-right .date .date-col i {
+        display: block;
+        font-style: normal;
+        font-size: 20px;
+        line-height: 22px;
+        color: #00b3b7;
+        text-transform: uppercase; }
 
 .button-wrap {
   margin-bottom: 10px; }
