--- a/css/offer.css
+++ b/css/offer.css
@@ -443,6 +443,45 @@ input[type=number]::-webkit-outer-spin-button {
           visibility: hidden;
           transition: all .2s linear; }
 
+.mobile-menu-button {
+  display: none;
+  width: 35px;
+  height: 35px;
+  margin-left: 15px;
+  cursor: pointer;
+  position: relative; }
+  @media (max-width: 320px) {
+    .mobile-menu-button {
+      margin-left: 10px; } }
+  .mobile-menu-button.active span.line1 {
+    top: 18px;
+    transform: rotate(45deg); }
+  .mobile-menu-button.active span.line2 {
+    opacity: 0;
+    visibility: hidden;
+    right: 10px; }
+  .mobile-menu-button.active span.line3 {
+    bottom: 15px;
+    width: 100%;
+    transform: rotate(-45deg); }
+  .mobile-menu-button span {
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    transition: all .2s linear; }
+    .mobile-menu-button span.line1 {
+      top: 7px; }
+    .mobile-menu-button span.line2 {
+      top: 17px; }
+    .mobile-menu-button span.line3 {
+      bottom: 6px;
+      width: 25px; }
+  @media (max-width: 768px) {
+    .mobile-menu-button {
+      display: block; } }
+
 .header-buttons {
   padding-top: 5px; }
   @media (max-width: 768px) {
@@ -452,44 +491,6 @@ input[type=number]::-webkit-outer-spin-button {
       align-items: center;
       z-index: 100;
       padding-top: 0; } }
-  .header-buttons .mobile-menu-button {
-    display: none;
-    width: 35px;
-    height: 35px;
-    margin-left: 15px;
-    cursor: pointer;
-    position: relative; }
-    @media (max-width: 320px) {
-      .header-buttons .mobile-menu-button {
-        margin-left: 10px; } }
-    .header-buttons .mobile-menu-button.active span.line1 {
-      top: 18px;
-      transform: rotate(45deg); }
-    .header-buttons .mobile-menu-button.active span.line2 {
-      opacity: 0;
-      visibility: hidden;
-      right: 10px; }
-    .header-buttons .mobile-menu-button.active span.line3 {
-      bottom: 15px;
-      width: 100%;
-      transform: rotate(-45deg); }
-    .header-buttons .mobile-menu-button span {
-      position: absolute;
-      right: 0;
-      width: 100%;
-      height: 2px;
-      background-color: #fff;
-      transition: all .2s linear; }
-      .header-buttons .mobile-menu-button span.line1 {
-        top: 7px; }
-      .header-buttons .mobile-menu-button span.line2 {
-        top: 17px; }
-      .header-buttons .mobile-menu-button span.line3 {
-        bottom: 6px;
-        width: 25px; }
-    @media (max-width: 768px) {
-      .header-buttons .mobile-menu-button {
-        display: block; } }
   .header-buttons a {
     display: inline-block;
     vertical-align: middle;
@@ -519,6 +520,26 @@ input[type=number]::-webkit-outer-spin-button {
         border-color: #00b3b7; }
     .header-buttons a.button-sign-up:hover, .header-buttons a.button-sign-up.active {
       color: #00b3b7; }
+
+.user-info {
+  text-decoration: none; }
+  .user-info:hover {
+    text-decoration: none; }
+    .user-info:hover span {
+      color: #00b3b7; }
+  .user-info i {
+    display: block;
+    font-size: 20px;
+    color: #fff;
+    margin-right: 10px; }
+  .user-info span {
+    display: block;
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 700;
+    transition: all .2s linear; }
 
 .main-footer {
   background-color: #203140;
@@ -1287,7 +1308,8 @@ input[type=number]::-webkit-outer-spin-button {
     top: 50%;
     transform: translateY(-50%);
     transition: all .2s linear;
-    right: -6px; }
+    right: -6px;
+    font-size: 25px; }
   .faq-container .faq-header a {
     display: block;
     text-decoration: none;
