--- a/scss/login.scss
+++ b/scss/login.scss
@@ -47,7 +47,23 @@
 
     @media (max-width: $screen-sm-min) {
       left: 15px;
+      font-size: 21px;
     }
+  }
+
+  h3, p {
+    margin: 0 0 15px 0;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 700;
+    color: $dark-color;
+    text-transform: uppercase;
+  }
+
+  p {
+    margin: 0 0 35px 0;
+    font-weight: 300;
+    text-transform: none;
   }
 
   .login-form-row {
