--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -64,6 +64,7 @@
     width: 250px;
     height: 100vh;
     background: $dark-color;
+    z-index: 10;
     padding: 58px 0 15px 0;
     transition: all .4s ease-in-out;
 
@@ -148,11 +149,12 @@
 
 .mobile-menu-button {
   display: none;
-  width: 35px;
-  height: 35px;
-  margin-left: 15px;
+  width: 25px;
+  height: 31px;
+  margin-left: 20px;
   cursor: pointer;
   position: relative;
+  z-index: 10;
 
   @media (max-width: 320px) {
     margin-left: 10px;
@@ -161,7 +163,7 @@
   &.active {
     span {
       &.line1 {
-        top: 18px;
+        top: 15px;
         transform: rotate(45deg);
       }
 
@@ -192,7 +194,7 @@
     }
 
     &.line2 {
-      top: 17px;
+      top: 15px;
     }
 
     &.line3 {
@@ -262,11 +264,12 @@
 
 .user-info {
   text-decoration: none;
+  z-index: 10;
 
   &:hover {
     text-decoration: none;
 
-    span {
+    span, i {
       color: $main-color;
     }
   }
@@ -276,6 +279,7 @@
     font-size: 20px;
     color: #fff;
     margin-right: 10px;
+    @include transition;
   }
 
   span {
