--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -5,7 +5,8 @@ body {
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  min-height: 100vh; }
+  min-height: 100vh;
+  height: auto; }
   body.overflow-h {
     overflow: hidden; }
   body.modal-open .main-header .header-holder {
@@ -384,6 +385,7 @@ input[type=number]::-webkit-outer-spin-button {
       width: 250px;
       height: 100vh;
       background: #203140;
+      z-index: 10;
       padding: 58px 0 15px 0;
       transition: all .4s ease-in-out; }
       .main-nav.show-nav {
@@ -445,16 +447,17 @@ input[type=number]::-webkit-outer-spin-button {
 
 .mobile-menu-button {
   display: none;
-  width: 35px;
-  height: 35px;
-  margin-left: 15px;
+  width: 25px;
+  height: 31px;
+  margin-left: 20px;
   cursor: pointer;
-  position: relative; }
+  position: relative;
+  z-index: 10; }
   @media (max-width: 320px) {
     .mobile-menu-button {
       margin-left: 10px; } }
   .mobile-menu-button.active span.line1 {
-    top: 18px;
+    top: 15px;
     transform: rotate(45deg); }
   .mobile-menu-button.active span.line2 {
     opacity: 0;
@@ -474,7 +477,7 @@ input[type=number]::-webkit-outer-spin-button {
     .mobile-menu-button span.line1 {
       top: 7px; }
     .mobile-menu-button span.line2 {
-      top: 17px; }
+      top: 15px; }
     .mobile-menu-button span.line3 {
       bottom: 6px;
       width: 25px; }
@@ -522,16 +525,18 @@ input[type=number]::-webkit-outer-spin-button {
       color: #00b3b7; }
 
 .user-info {
-  text-decoration: none; }
+  text-decoration: none;
+  z-index: 10; }
   .user-info:hover {
     text-decoration: none; }
-    .user-info:hover span {
+    .user-info:hover span, .user-info:hover i {
       color: #00b3b7; }
   .user-info i {
     display: block;
     font-size: 20px;
     color: #fff;
-    margin-right: 10px; }
+    margin-right: 10px;
+    transition: all .2s linear; }
   .user-info span {
     display: block;
     text-transform: uppercase;
@@ -549,26 +554,59 @@ input[type=number]::-webkit-outer-spin-button {
   height: 100%;
   background-color: #203140;
   overflow-y: auto;
+  z-index: 100;
   overflow-x: hidden;
   transition: all .5s ease-in-out; }
+  @media (max-width: 992px) {
+    .dashboard-sidebar {
+      width: 285px; } }
+  @media (max-width: 576px) {
+    .dashboard-sidebar {
+      width: 315px;
+      height: 100vh; } }
+  @media (max-height: 414px) {
+    .dashboard-sidebar {
+      height: 100%; } }
   .dashboard-sidebar.sidebar-sm {
     width: 80px; }
+    @media (max-width: 576px) {
+      .dashboard-sidebar.sidebar-sm {
+        width: 60px; } }
     .dashboard-sidebar.sidebar-sm .heading {
       padding: 20px 0 30px 10px; }
+      @media (max-width: 1280px) {
+        .dashboard-sidebar.sidebar-sm .heading {
+          padding: 10px 0 10px 10px; } }
+      @media (max-width: 576px) {
+        .dashboard-sidebar.sidebar-sm .heading {
+          padding: 20px 0 20px 10px; } }
       .dashboard-sidebar.sidebar-sm .heading a .logo-lg {
         display: none; }
       .dashboard-sidebar.sidebar-sm .heading a .logo-sm {
         display: block;
         width: 45px; }
+        @media (max-width: 576px) {
+          .dashboard-sidebar.sidebar-sm .heading a .logo-sm {
+            width: 25px; } }
       .dashboard-sidebar.sidebar-sm .heading a.sidebar-trigger {
         transform: rotate(180deg); }
+        @media (max-width: 576px) {
+          .dashboard-sidebar.sidebar-sm .heading a.sidebar-trigger {
+            position: relative;
+            top: 0; } }
     .dashboard-sidebar.sidebar-sm .sidebar-nav {
       padding: 0 0 0 10px; }
+      @media (max-width: 576px) {
+        .dashboard-sidebar.sidebar-sm .sidebar-nav {
+          padding: 0; } }
       .dashboard-sidebar.sidebar-sm .sidebar-nav li a {
         padding: 20px 23px; }
         @media (max-width: 1366px) {
           .dashboard-sidebar.sidebar-sm .sidebar-nav li a {
             padding: 14px 23px; } }
+        @media (max-width: 576px) {
+          .dashboard-sidebar.sidebar-sm .sidebar-nav li a {
+            padding: 14px 19px; } }
         .dashboard-sidebar.sidebar-sm .sidebar-nav li a.bottom-line:after {
           width: 35px; }
         .dashboard-sidebar.sidebar-sm .sidebar-nav li a span {
@@ -577,22 +615,42 @@ input[type=number]::-webkit-outer-spin-button {
   .dashboard-sidebar .heading {
     height: 99px;
     padding: 20px 30px 30px 60px;
+    background-color: #203140;
     transition: all .5s ease-in-out; }
+    @media (max-width: 1280px) {
+      .dashboard-sidebar .heading {
+        height: 65px; } }
+    @media (max-width: 1280px) {
+      .dashboard-sidebar .heading {
+        padding: 10px 0 10px 10px; } }
+    @media (max-width: 576px) {
+      .dashboard-sidebar .heading {
+        padding: 20px 0 20px 10px; } }
     .dashboard-sidebar .heading a {
       display: block; }
       .dashboard-sidebar .heading a img {
         transition: all .5s ease-in-out; }
       .dashboard-sidebar .heading a .logo-lg {
         display: block; }
+        @media (max-width: 576px) {
+          .dashboard-sidebar .heading a .logo-lg {
+            width: 87px; } }
       .dashboard-sidebar .heading a .logo-sm {
         display: none; }
       .dashboard-sidebar .heading a.sidebar-trigger {
         display: block;
         color: #fff;
         transition: all .5s ease-in-out; }
+        @media (max-width: 576px) {
+          .dashboard-sidebar .heading a.sidebar-trigger {
+            position: relative;
+            top: 7px; } }
         .dashboard-sidebar .heading a.sidebar-trigger i {
           font-size: 35px;
           line-height: 35px; }
+          @media (max-width: 576px) {
+            .dashboard-sidebar .heading a.sidebar-trigger i {
+              line-height: 22px; } }
   .dashboard-sidebar .sidebar-nav {
     padding: 0 0 0 20px;
     margin: 0;
@@ -606,6 +664,10 @@ input[type=number]::-webkit-outer-spin-button {
       text-decoration: none;
       border-radius: 3px 0 0 3px;
       transition: all .5s ease-in-out; }
+      @media (max-width: 576px) {
+        .dashboard-sidebar .sidebar-nav li a {
+          border-radius: 0;
+          padding: 14px 19px; } }
       @media (max-width: 1366px) {
         .dashboard-sidebar .sidebar-nav li a {
           padding: 14px 30px; } }
@@ -660,22 +722,52 @@ input[type=number]::-webkit-outer-spin-button {
           font-style: normal;
           margin-left: 15px; }
 
+@media (max-width: 576px) {
+  .dashboard-wrapper {
+    overflow: hidden;
+    position: relative; } }
 .dashboard-wrapper .dashboard-container {
   padding-left: 335px;
   width: 100%;
   transition: all .5s ease-in-out; }
+  @media (max-width: 1280px) {
+    .dashboard-wrapper .dashboard-container {
+      padding-left: 80px; } }
+  @media (max-width: 576px) {
+    .dashboard-wrapper .dashboard-container {
+      padding-left: 60px; } }
   .dashboard-wrapper .dashboard-container.container-lg {
     padding-left: 80px; }
+    @media (max-width: 576px) {
+      .dashboard-wrapper .dashboard-container.container-lg {
+        padding-left: 60px; } }
+    @media (max-width: 1280px) {
+      .dashboard-wrapper .dashboard-container.container-lg .header-dashboard {
+        padding: 0 15px; } }
   .dashboard-wrapper .dashboard-container .header-dashboard {
     height: 99px;
     width: 100%;
     background-color: #203140;
-    padding: 0 60px; }
+    padding: 0 60px;
+    transition: all .5s ease-in-out; }
     @media (max-width: 1280px) {
+      .dashboard-wrapper .dashboard-container .header-dashboard {
+        padding: 0 15px 0 265px;
+        height: 65px; } }
+    @media (max-width: 992px) {
+      .dashboard-wrapper .dashboard-container .header-dashboard {
+        padding: 0 15px 0 210px; } }
+    @media (max-width: 768px) {
+      .dashboard-wrapper .dashboard-container .header-dashboard {
+        justify-content: flex-end !important; } }
+    @media (max-width: 576px) {
       .dashboard-wrapper .dashboard-container .header-dashboard {
         padding: 0 15px; } }
     .dashboard-wrapper .dashboard-container .header-dashboard .main-nav {
       padding: 0; }
+      @media (max-width: 768px) {
+        .dashboard-wrapper .dashboard-container .header-dashboard .main-nav {
+          padding: 64px 0 15px 0; } }
       .dashboard-wrapper .dashboard-container .header-dashboard .main-nav ul li:first-child {
         margin-left: 0; }
       .dashboard-wrapper .dashboard-container .header-dashboard .main-nav ul li:last-child {
@@ -684,9 +776,18 @@ input[type=number]::-webkit-outer-spin-button {
     padding: 60px; }
     @media (max-width: 1280px) {
       .dashboard-wrapper .dashboard-container .dashboard-wrapper {
-        padding: 60px 15px; } }
+        padding: 43px 15px; } }
+    @media (max-width: 992px) {
+      .dashboard-wrapper .dashboard-container .dashboard-wrapper {
+        padding: 15px; } }
     .dashboard-wrapper .dashboard-container .dashboard-wrapper .dashboard-top-heading {
       margin-bottom: 70px; }
+      @media (max-width: 992px) {
+        .dashboard-wrapper .dashboard-container .dashboard-wrapper .dashboard-top-heading {
+          margin-bottom: 30px; } }
+      @media (max-width: 992px) {
+        .dashboard-wrapper .dashboard-container .dashboard-wrapper .dashboard-top-heading .heading {
+          margin-bottom: 20px; } }
       .dashboard-wrapper .dashboard-container .dashboard-wrapper .dashboard-top-heading .heading h2 {
         margin: 0;
         font-size: 30px;
@@ -694,6 +795,10 @@ input[type=number]::-webkit-outer-spin-button {
         font-weight: 700;
         color: #00b3b7;
         text-transform: uppercase; }
+        @media (max-width: 576px) {
+          .dashboard-wrapper .dashboard-container .dashboard-wrapper .dashboard-top-heading .heading h2 {
+            font-size: 24px;
+            line-height: 26px; } }
       .dashboard-wrapper .dashboard-container .dashboard-wrapper .dashboard-top-heading .heading p {
         margin: 0;
         font-size: 16px;
@@ -707,6 +812,9 @@ input[type=number]::-webkit-outer-spin-button {
 
 .dashboard-row {
   padding-bottom: 70px; }
+  @media (max-width: 992px) {
+    .dashboard-row {
+      padding-bottom: 30px; } }
   .dashboard-row .investment-board {
     padding: 0; }
   .dashboard-row:first-child {
@@ -722,6 +830,10 @@ input[type=number]::-webkit-outer-spin-button {
       color: #203140;
       text-transform: uppercase;
       margin: 0 0 10px 0; }
+      @media (max-width: 576px) {
+        .dashboard-row .dashboard-repeat-title h3 {
+          font-size: 20px;
+          line-height: 22px; } }
     .dashboard-row .dashboard-repeat-title p {
       margin: 0;
       font-size: 16px;
@@ -736,11 +848,17 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 16px !important;
   line-height: 18px !important;
   padding: 15px 20px !important;
-  border-width: 2px !important; }
+  border-width: 2px !important;
+  margin-top: 35px; }
+  @media (max-width: 576px) {
+    .db-load-more {
+      min-width: inherit; } }
 
 .dashboard-table {
-  width: 100%;
-  margin-bottom: 35px; }
+  width: 100%; }
+  @media (max-width: 1024px) {
+    .dashboard-table {
+      width: 1200px; } }
   .dashboard-table th, .dashboard-table td {
     padding: 20px; }
     .dashboard-table th .checkbox, .dashboard-table td .checkbox {
