--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -54,6 +54,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  height:auto;
 
   &.overflow-h {
     overflow: hidden;
